# pybind11-initialsteps

./: .gitmodules  README.md
firststep/: build-run.sh  example.cpp  example.py
secondstep/: CMakeLists.txt  Makefile  example.cxx  useexample.py
secondstep-Makefile/: Makefile
secondstep-Makefile/src/: add.cxx
secondstep/arith/: CMakeLists.txt
secondstep/arith/inc/: arith.hxx
secondstep/arith/src/: add.cxx
secondstep/example/: CMakeLists.txt
secondstep/example-cpython-extension/: CMakeLists.txt
secondstep/example-cpython-extension/src/: example.cxx
secondstep/example/src/: example.cxx
secondstep/inc/: add.hxx
secondstep/libarith/: CMakeLists.txt
secondstep/libarith/inc/: libarith.hxx
secondstep/libarith/src/: add.cxx
